Setup repository for draft-west-http-state-tokens using https://github.com/martinthomson/i-d-template

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
-.refcache
-*.xml
+*.pdf
+*.redxml
+*.swp
 *.txt
+*.upload
+*.xml
+*~
+.refcache
+.tags
+.targets.mk
+/*-[0-9][0-9].xml
+draft-west-http-state-tokens.xml
+issues.json
+lib
+pulls.json
+report.xml
+venv/
+lib
+draft-west-http-state-tokens.xml
